[package]
name = "tide-jsonwebtoken"
version = "0.1.0"
edition = "2021"
description = "Tide (http-rs/tide) JWT Authorization Middleware"
homepage = "https://github.com/bitdinosaur-io/tide-jsonwebtoken"
repository = "https://github.com/bitdinosaur-io/tide-jsonwebtoken"
keywords = ["jwt", "api", "token", "jsonwebtoken", "tide"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16", default-features = false }
jsonwebtoken = "9.1.0"
async-trait = "0.1.74"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.10.0"
tide = { version = "0.16" }
